# langbda

./: Cargo.toml  README.md
assets/lexicons/: en.bak.lexicon  en.lexicon
src/: bintree.rs  direction.rs  error.rs  interner.rs  logger.rs  main.rs  syntax_node.rs
src/cognitive/: error.rs  mod.rs  model.rs
src/cognitive/lambda/: error.rs  mod.rs  node.rs  struct.rs  valid_entry.rs
src/cognitive/tree/: error.rs  graph.rs  mod.rs  node.rs  struct.rs
src/dialect/: english.rs  mod.rs  trait.rs
src/feature/: feature.rs  feature_set.rs  mod.rs
src/interpreter/: action.rs  error.rs  follow.rs  interpret.rs  interpreter.rs  lexical_only_tree.rs  mod.rs  syntax_tree.rs  todo_task.rs  tree_node.rs
src/lexicon/: entry.rs  feature_topology.rs  interpretation.rs  lexicon.pest  lexicon.rs  mod.rs  node.rs  parser.rs  trait.rs
src/lexicon/parser/: mod.rs  trait.rs
src/lexicon/parser/pest/: feature_topology.rs  key_type.rs  lexicon.pest  mod.rs  struct.rs
src/lexicon/simple/: mod.rs  struct.rs
src/lexicons/: en.lexicon
src/sentence/: mod.rs  parser.rs  sentence.pest  sentence.rs
src/syntax/: error.rs  feature_set.rs  mod.rs  syntax_value.rs
src/tokenizer/: mod.rs  trait.rs
src/tokenizer/simple/: mod.rs  struct.rs
src/trie/: mod.rs  node.rs  trie_multimap.rs
