[package]
name = "langbda"
version = "0.1.0"
edition = "2024"

[dependencies]
lasso = { version = "0.7.3", features = ["multi-threaded"] }
pest = "2.8.0"
pest_derive = "2.8.0"
derive_more = { version = "2.0.1", features = ["display", "from"] }
log = "0.4.27"
env_logger = "0.11.8"
graphviz-rust = "0.9.3"
